[tool.poetry]
name = "lmclient-core"
version = "0.2.0"
description = "LM Async Client, openai client, azure openai client ..."
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "lmclient"}]
repository = "https://github.com/wangyuxinwhy/lmclient"
keywords = ["lmclient", "openai", "azure", "async"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.7"
asyncer = "0.0.2"
typing-extensions = "^4.6.2"
diskcache = "^5.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
isort = "^5.12.0"
pyright = "^1.1.310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
