[tool.poetry]
name = "lmclient-core"
version = "0.5.0"
description = "LM Async Client, openai client, azure openai client ..."
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "lmclient"}]
repository = "https://github.com/wangyuxinwhy/lmclient"
keywords = ["lmclient", "openai", "azure", "async"]

[tool.poetry.dependencies]
python = "^3.8"
asyncer = "0.0.2"
typing-extensions = "^4.6.2"
diskcache = "^5.6.1"
httpx = "^0.24.1"
tenacity = "^8.2.2"
pydantic = "^2.1.1"
websocket-client = "^1.6.1"
pyjwt = "^2.8.0"
cachetools = "^5.3.1"
tqdm = "^4.66.1"

[tool.ruff]
line-length = 128
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
isort = "^5.12.0"
pyright = "^1.1.310"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
